# projektowanieefektywnychalgorytmow

./: .gitignore  BruteForce.cpp  CMakeLists.txt  Configuration.cpp  Configuration.h  Graph.cpp  Graph.h  NearestNeighbor.cpp  branchnbound.cpp  config.txt  generatorproblemow.cpp  out.csv  problemconfig.txt  random.cpp
